# SPECTRAX-GK

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES_v1.1.md  codecov.yml  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  (+2 more)
api/: index.html
benchmarks/: README.md  basis_orthonormality.py  capability_matrix.toml  collisional_zonal_response.toml  cyclone_linear_benchmark.py  etg_linear_benchmark.py  kbm_beta_scan.py  kbm_linear_comparison.py  kinetic_linear_benchmark.py  runtime_secondary_slab.toml  runtime_w7x_zonal_response_vmec.toml  secondary_slab_workflow.py  tem_linear_benchmark.py
dev_guide/: index.html
docs/: algorithms.rst  api.rst  architecture.rst  architecture_refactor_plan.rst  benchmarks.rst  code_structure.rst  codes.rst  conf.py  dev_guide.md  differentiable_refactor_plan.rst  examples.rst  geometry.rst  index.md  index.rst  inputs.md  inputs.rst  install.md  linear_model.rst  manuscript_figures.rst  normalization.rst  numerics.rst  operators.rst  outputs.md  outputs.rst  parallelization.rst  performance.rst  physics.md  quasilinear.rst  quickstart.md  quickstart.rst  references.rst  release_scope.rst  requirements.txt  roadmap.rst  solvers.rst  stellarator_optimization.rst  testing.rst  theory.rst  validation_strategy.rst  velocity_maps.rst  (+1 more)
examples/: README.md  _runtime_case.py  cetg_runtime_nonlinear.py  cyclone_base_case.toml  cyclone_linear_benchmark.py  cyclone_nonlinear_driver.py  cyclone_runtime_linear.py  cyclone_runtime_nonlinear.py  diffrax_linear_demo.py  etg_linear_benchmark.py  etg_runtime_linear.py  example.py  gradB_coupling_hl_1d.py  hsx_linear_imported_geometry.py  hsx_nonlinear_vmec_geometry.py  kaw_runtime_linear.py  kbm_beta_scan.py  kbm_runtime_linear.py  kbm_runtime_nonlinear.py  kinetic_linear_benchmark.py  landau_damping.toml  linear_rhs_demo.py  linear_slab.py  linear_slab.toml  miller_nonlinear_runtime.py  mtm_linear_benchmark.py  run_from_toml.py  runtime_from_toml.py  runtime_hsx_nonlinear_vmec_geometry.toml  secondary_slab_workflow.py  tem_linear_benchmark.py  two_stream_hermite_1d.py  two_stream_hermite_only.py  w7x_nonlinear_imported_geometry.py  w7x_nonlinear_vmec_geometry.py
examples_old/: two_stream.toml
examples_older/: README.md
inputs/: index.html
install/: index.html
old_src/: diffraxtemp.py  qutemp.py  temp.py
outputs/: index.html
physics/: index.html
quickstart/: index.html
scripts/: gkx_2_code_inventory.csv
search/: search_index.json
spectraxgk/: __init__.py  _hl_basis.py  _initialization.py  _initialization_multispecies.py  _model.py  _model_multispecies.py  _plot.py  _simulation.py  _simulation_multispecies.py  args.py  backends.py  basis.py  cli.py  constants.py  dg.py  diagnostics.py  diffraxtemp.py  fourier.py  grids.py  hermite_ops.py  io_config.py  landau_damping.toml  model.py  operators.py  plot_multispecies.py  plots.py  poisson.py  post.py  pretty.py  run.py  solver.py  temp.py  two_stream.toml  types.py  util.py
spectraxgk_old/: __init__.py  cli.py  diagnostics.py  model.py  next  plots.py  types.py
spectraxgk_older/: __init__.py  backends.py  cli.py  dg.py  diagnostics.py  fourier.py  util.py
tests/: README.md  conftest.py  test_analysis.py  test_args_pretty.py  test_audit_repository_size.py  test_auto_fit_signal.py  test_autodiff_demo.py  test_autodiff_twomode_demo.py  test_autodiff_validation.py  test_basis.py  test_benchmark_mapped_velocity_rhs.py  test_benchmark_results_manifest.py  test_benchmark_runtime_memory.py  test_benchmark_scan.py  test_benchmarking.py  test_benchmarks.py  test_benchmarks_helpers.py  test_benchmarks_runner_branches.py  test_build_baseline_optimized_nonlinear_audit.py  test_build_external_vmec_replicate_ensemble.py  test_build_manuscript_readiness_status.py  test_build_matched_nonlinear_transport_comparison.py  test_build_matched_nonlinear_transport_matrix.py  test_build_nonlinear_campaign_admission_report.py  test_build_nonlinear_landscape_admission_report.py  test_build_nonlinear_transport_horizon_audit.py  test_build_nonlinear_window_fd_audit.py  test_build_open_research_lane_status.py  test_build_parallelization_completion_status.py  test_build_pre_manuscript_closure_runbook.py  test_build_pre_manuscript_closure_status.py  test_build_qa_itg_optimization_readme_panel.py  test_build_qa_optimizer_strategy_report.py  test_build_qi_branch_refinement_gate.py  test_build_quasilinear_error_anatomy.py  test_build_quasilinear_holdout_gap_report.py  test_build_reduced_nonlinear_audit_prelaunch_report.py  test_build_technical_release_status.py  test_build_tem_branch_parity_audit.py  test_build_transport_audit_redesign_report.py  (+322 more)
tests_old/: conftest.py  test_energy_diag.py  test_fourier_linear_smoke.py  test_ioconfig.py  test_operators.py  test_post_summary.py  test_solver_minimal.py  test_util_kgrid.py
tmp_vmec_debug/: gx_vmec_geometry.eik.nc  gx_vmec_geometry.toml  internal_vmec.eik.nc
tools/: README.md  __init__.py  _profiler_options.py  audit_repository_size.py  benchmark_atlas_manifest.toml  benchmark_integrators.py  benchmark_lineax_linear_solve.py  benchmark_mapped_velocity_rhs.py  benchmark_nonlinear_suite.py  benchmark_refresh_manifest.toml  benchmark_runtime_memory.py  build_baseline_optimized_nonlinear_audit.py  build_external_vmec_holdout_runbook.py  build_external_vmec_replicate_ensemble.py  build_manuscript_readiness_status.py  build_matched_nonlinear_transport_comparison.py  build_matched_nonlinear_transport_matrix.py  build_nonlinear_campaign_admission_report.py  build_nonlinear_gradient_control_mean_gate.py  build_nonlinear_gradient_variance_reduction_plan.py  build_nonlinear_landscape_admission_report.py  build_nonlinear_transport_horizon_audit.py  build_nonlinear_turbulence_gradient_fd_gate.py  build_nonlinear_window_fd_audit.py  build_open_research_lane_status.py  build_parallel_decomposition_status.py  build_parallelization_completion_status.py  (+273 more)
(+2597 files in other folders)
