[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrax-gk"
version = "0.0.0"
description = "JAX gyrokinetic solver with Hermite-Laguerre velocity space"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "SPECTRAX-GK team"}]

dependencies = [
  "jax>=0.8,<0.9",
  "jaxlib>=0.8,<0.9",
  "numpy>=2.3,<2.4",
  "matplotlib>=3.7",
  "diffrax>=0.7,<0.8",
  "equinox>=0.13,<0.14",
  "tomli>=2.0; python_version < '3.11'",
  "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.6",
  "mypy>=1.6",
  "mkdocs>=1.5",
  "sphinx>=7.0",
  "matplotlib>=3.7",
]

[project.scripts]
spectrax-gk = "spectraxgk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: tests that require or exercise GPU/device-specific execution paths",
  "integration: broader end-to-end or workflow tests",
]

[tool.mypy]
files = ["src/spectraxgk"]
exclude = ["legacy_archive", "examples", "docs"]

[[tool.mypy.overrides]]
module = [
  "booz_xform",
  "booz_xform_jax",
  "netCDF4",
  "rich",
  "rich.*",
  "scipy",
  "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spectraxgk.from_gx.vmec", "spectraxgk.geometry.vmec"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["spectraxgk.from_gx.miller"]
disable_error_code = ["arg-type"]
