[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrax-gk"
version = "1.0"
description = "JAX gyrokinetic solver with Hermite-Laguerre velocity space"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{name = "SPECTRAX-GK team"}]
keywords = ["gyrokinetics", "jax", "plasma-physics", "tokamak", "stellarator", "turbulence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "matplotlib",
  "scipy",
  "netCDF4",
  "diffrax",
  "equinox",
  "tomli; python_version < '3.11'",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/uwplasma/SPECTRAX-GK"
Documentation = "https://github.com/uwplasma/SPECTRAX-GK/tree/main/docs"
Repository = "https://github.com/uwplasma/SPECTRAX-GK"
Issues = "https://github.com/uwplasma/SPECTRAX-GK/issues"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "matplotlib",
]
release = [
  "build",
  "twine",
]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "mkdocs",
  "sphinx",
  "sphinx-rtd-theme",
  "matplotlib",
  "build",
  "twine",
]

[project.scripts]
spectrax-gk = "spectraxgk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: tests that require or exercise GPU/device-specific execution paths",
  "integration: broader end-to-end or workflow tests",
]

[tool.mypy]
files = ["src/spectraxgk"]
exclude = ["legacy_archive", "examples", "docs"]

[[tool.mypy.overrides]]
module = [
  "booz_xform",
  "booz_xform_jax",
  "netCDF4",
  "rich",
  "rich.*",
  "scipy",
  "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spectraxgk.from_gx.vmec", "spectraxgk.geometry.vmec"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["spectraxgk.from_gx.miller"]
disable_error_code = ["arg-type"]
