[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gkx"
version = "1.7.0"
description = "JAX gyrokinetic solver with Hermite-Laguerre velocity space"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "GKX team"}]
keywords = ["gyrokinetics", "jax", "plasma-physics", "tokamak", "stellarator", "turbulence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "matplotlib",
  "scipy",
  "netCDF4",
  "diffrax",
  "equinox",
  "solvax>=0.8.6",
  "tomli; python_version < '3.11'",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/uwplasma/GKX"
Documentation = "https://github.com/uwplasma/GKX/tree/main/docs"
Repository = "https://github.com/uwplasma/GKX"
Issues = "https://github.com/uwplasma/GKX/issues"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "matplotlib",
]
release = [
  "build",
  "twine",
]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "mpmath",
  "gmpy2",
  "pandas",
  "Pillow",
  "mkdocs",
  "sphinx",
  "sphinx-rtd-theme",
  "matplotlib",
  "build",
  "twine",
]
assets = [
  "Pillow",
]

[project.scripts]
gkx = "gkx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: tests that require or exercise GPU/device-specific execution paths",
  "integration: broader end-to-end or workflow tests",
  "slow: long-running literature or artifact validation tests kept out of bounded release coverage shards",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"tools/**/*.py" = ["E402"]
"tests/*.py" = ["E402"]
"tools/*.py" = ["E402"]

[tool.mypy]
files = ["src/gkx"]
exclude = ["legacy_archive", "examples", "docs"]

[[tool.mypy.overrides]]
module = [
  "booz_xform",
  "booz_xform_jax",
  "netCDF4",
  "pandas",
  "rich",
  "rich.*",
  "scipy",
  "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gkx.geometry.imported_vmec"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["gkx.geometry.imported_miller"]
disable_error_code = ["arg-type"]
